refactor: • The project is now fully functional at the Main code base level.           • Compilation errors caused by library incompatibilities, missing DTOs, and incorrect module relationships have been resolved.           • The project's main code now compiles successfully using ./mvnw compilation.           • Security and JWT: Fixed usage of the jjwt library, switching from API 0.12.x to the currently used version 0.11.5 in JwtTokenProvider, JwtClaimExtractor, and others.           • Shopping Cart: Refactored CartEndpoint and related services, fixed incorrect field names for itemsQuantity, goodsQuantity, and DTO imports.           • User Management: Removed the redundant UserDetailsImpl class and replaced it with UserEntity, fixed AddressDto validation, and restored the accidentally removed password change functionality in UserRepository.           • OpenAPI: Configured to work correctly with generated DTOs, fixed the use of constructors and setters in controllers.           • Access Control: Added missing permission verification methods requireCanModerate and requireAdmin to RBACGuardService and ShopAccessGuard.